# Algorithms

./: .gitignore  data.json  main.py  node.js  package.json  pnpm-lock.yaml  pyproject.toml  tmp.xls
apps/web/: package.json
apps/web/app/: page.tsx
dynamic_programming/: lcs.py
graph_images/avl/1/: after_lrotate 6  after_rotating_6_right  before_lrotate 1  before_rotating_7_right
graph_images/avl/12/: after_lrotate 34  after_rotating_34_right  before_lrotate 12  before_rotating_234_right
graph_images/avl/13/: after_lrotate 23  after_rotating_23_right  before_lrotate 13  before_rotating_25_right
graph_images/avl/134/: after_lrotate 56  after_rotating_56_right  before_lrotate 45  before_rotating_134_right
graph_images/avl/135/: after_lrotate 234  before_lrotate 135
graph_images/avl/234/: after_lrotate 356  after_rotating_135_right  after_rotating_356_right  before_lrotate 234  before_rotating_234_right  before_rotating_456_right
graph_images/avl/34/: after_lrotate 234  before_lrotate 34
graph_images/avl/456/: after_lrotate 1356  after_lrotate 561  after_rotating_1356_right  after_rotating_561_right  before_lrotate 456  before_rotating_1234_right  before_rotating_21346_right
graph_images/avl/6/: after_lrotate 34  before_lrotate 6
graph_images/avl/7/: after_lrotate 12  after_rotating_12_right  before_lrotate 7  (+1 more)
graph_images/huffman/: huffman tree
graph_images/max_sheap/: max heaap
heaps/: min_heap.py
logic/: task_scheduling.py
sorts/: bucket_sort.py  insertion_sort.py
trees/: avl_tree.py  huffman_coding.py
trees/utility/: tree_node.py
(+17 files in other folders)
