[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Elias"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.1"
python-dateutil = "^2.8.2"
numpy = "^1.26.2"
xlwt = "^1.3.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
